@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.2.23-cur, done by cs@nop.
--;-;-;2022-02-23 08:11:11, took 00:07:05, with 100 workers, on 2730 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-02-23 08:21:18, took 00:06:48, with 100 workers, on 2734 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2299,6 +2299,10 @@ http://sources.nop.hu/cfg/rout-bgp539.tst;rout-bgp539.tst;success;bgp routemap f
 http://sources.nop.hu/cfg/rout-bgp540.tst;rout-bgp540.tst;success;bgp routemap filtering with asmid with soft-reconfig
 http://sources.nop.hu/cfg/rout-bgp541.tst;rout-bgp541.tst;success;bgp routepolicy filtering with asmid
 http://sources.nop.hu/cfg/rout-bgp542.tst;rout-bgp542.tst;success;bgp routepolicy filtering with asmid with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp543.tst;rout-bgp543.tst;success;bgp routemap filtering with asbeg
+http://sources.nop.hu/cfg/rout-bgp544.tst;rout-bgp544.tst;success;bgp routemap filtering with asbeg with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp545.tst;rout-bgp545.tst;success;bgp routepolicy filtering with asbeg
+http://sources.nop.hu/cfg/rout-bgp546.tst;rout-bgp546.tst;success;bgp routepolicy filtering with asbeg with soft-reconfig
 http://sources.nop.hu/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.nop.hu/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.nop.hu/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
