@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.23-cur, done by cs@nop.<br/>
-tested: 2022-02-23 08:11:11, took 00:07:05, with 100 workers, on 2730 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-02-23 08:21:18, took 00:06:48, with 100 workers, on 2734 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2312,6 +2312,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp540.tst">rout-bgp540.tst</a></td><td>success</td><td>bgp routemap filtering with asmid with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp541.tst">rout-bgp541.tst</a></td><td>success</td><td>bgp routepolicy filtering with asmid</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp542.tst">rout-bgp542.tst</a></td><td>success</td><td>bgp routepolicy filtering with asmid with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp543.tst">rout-bgp543.tst</a></td><td>success</td><td>bgp routemap filtering with asbeg</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp544.tst">rout-bgp544.tst</a></td><td>success</td><td>bgp routemap filtering with asbeg with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp545.tst">rout-bgp545.tst</a></td><td>success</td><td>bgp routepolicy filtering with asbeg</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp546.tst">rout-bgp546.tst</a></td><td>success</td><td>bgp routepolicy filtering with asbeg with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
